# Arduino-JCL

./: README.md
example/: example.ino
jcl/: CMakeLists.txt  action.cpp  action.h  constants.cpp  context.cpp  context.h  crypt.cpp  helpers.h  jcl.cpp  jcl.h  library.properties  message.cpp  message.h  metadata.cpp  metadata.h  sensor.cpp  sensor.h  utils.cpp  utils.h
